# aniwave-qol-extension

./: .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  package.json  pnpm-lock.yaml
debug/: debug.js  settings copy.html  settings.html  vidplay-iframe-example.html
input_bot/: Cargo.toml  install-copy.sh  install-example.sh  install-locally.sh  install.sh
input_bot/old/: main.rs
input_bot/src/: lib.rs  main.rs  mock.rs  test.rs
src/: manifest.json
src/background/: index.js
src/background/listeners/: vidplay.js
src/content/: index.js
src/popup/: index.html  index.js
