[package]
name = "input_bot"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.3"
chrome_native_messaging = "0.3.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
rpath = false

[[bin]]
name = "test"
path = "src/test.rs"
doctest = false  # Exclude this binary from production

[[bin]]
name = "main"
path = "src/main.rs"